# kpotok_ugs

./: .env.example  .gitignore  Makefile  README.md  ROADMAP.md  docker-compose.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/.pg-test-venv/: pyvenv.cfg
apps/api/alembic/: env.py
apps/api/app/: main.py  storage.py
apps/api/cf_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/scripts/: run_postgres_critical_path.sh
apps/api/tests/: conftest.py  test_packet03.py  test_packet04.py  test_packet05.py  test_packet06.py  test_packet07.py  test_packet08.py  test_packet09.py  test_packet10.py  test_packet109.py  test_packet11.py  test_packet119.py  test_packet12.py  test_packet129.py  test_packet13.py  test_packet139.py  test_packet14.py  test_packet149.py  test_packet15.py  test_packet159.py  test_packet16.py  test_packet160.py  test_packet161.py  test_packet162.py  test_packet163.py  test_packet164.py  test_packet165.py  test_packet166.py  test_packet167.py  test_packet168.py  test_packet169.py  test_packet17.py  test_packet170.py  test_packet171.py  test_packet172.py  test_packet173.py  test_packet174.py  test_packet175.py  test_packet176.py  test_packet177.py  (+69 more)
apps/worker/: pyproject.toml
apps/worker/app/: api_client.py  config.py  llm_client.py  main.py  role_prompts.py  storage.py
apps/worker/cf_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/worker/tests/: test_packet26_worker.py  test_packet27_worker.py  test_packet28_worker.py  test_packet29_worker.py  test_packet30_worker.py  test_packet31_worker.py  test_packet32_storage.py  (+8 more)
(+165 files in other folders)
