[project]
name = "cf-worker"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "sqlalchemy>=2.0",
  "psycopg[binary]",
  "redis",
  "pydantic>=2.0",
  "pydantic-settings",
  "httpx",
  "minio"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
